2008-08-26 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/binary_search.rb: Fixed a bug.

    * lib/fantasdic/utils.rb: Added Enumerable#sum.
    * test/test_utils.rb: Added unit test for it.

    * lib/fantasdic/sources/virtual_dictionary.rb: Added Virtual Dictionary
    source. This is a source where databases are dictionaries defined in the
    settings. This is a convient solution to to group dictionaries together.
    * test/test_virtual_dictionary.rb: Added unit test for it.

2008-08-26 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/file_source.rb: Renamed @hash to @config.
    * lib/fantasdic/sources/virtual_dictionary.rb: Likewise.
    * lib/fantasdic/sources/dictd_file.rb: Likewise.
    * lib/fantasdic/sources/edict_file.rb: Likewise.
    * lib/fantasdic/sources/dict_server.rb: Likewise.
    * lib/fantasdic/source_base.rb: Likewise.
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Likewise.

2008-08-26 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/preferences.rb: Include the name of the dictionary in the
    configuration hash.
    * test/test_preferences.rb: Updated accordingly.

2008-08-25 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/main_app.rb: When right-clicking on a selected word,
    in the menu, display the currently-selected dictionary first.

2008-08-24 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/about_dialog.rb: Gtk::AboutDialog#name= is deprecated in
    favor of Gtk::AboutDialog#program_name= so try to use program_name= if
    available or name= if not.
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Likewise.

2008-08-24 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/binary_search.rb: Reusable binary search implementation.
    This implementation is aimed for files. It should be possible to use it for
    stardict dictionary files as well.

    * lib/fantasdic/file_source.rb: Code that is common to all file-based
    dictionary sources.